03-ocp-gitops/gitops-app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: dotnet-demo
  name: dotnet-demo
  namespace: gitops-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      deployment: dotnet-demo
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        deployment: dotnet-demo
    spec:
      containers:
        - image: image-registry.openshift-image-registry.svc:5000/gitops-demo/dotnet-demo@sha256:789608d0b13ac6b77655b4e8cf312e00982c6436dc437658a81a4e017fc61987
          imagePullPolicy: IfNotPresent
          name: dotnet-demo
          ports:
            - containerPort: 8080
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
