03-ocp-gitops/gitops-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: dotnet-demo
  name: dotnet-demo
  namespace: gitops-demo
spec:
  ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    deployment: dotnet-demo
  sessionAffinity: None
  type: ClusterIP
